[tool.poetry]
name = "spanreed"
version = "0.1.0"
description = ""
authors = ["Amir Rachum <amir@rachum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
todoist-api-python = "*"
telegram = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
