[tool.poetry]
name = "spanreed"
version = "0.1.0"
description = ""
authors = ["Amir Rachum <amir@rachum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
todoist-api-python = "*"
python-telegram-bot = {extras = ["job-queue"], version = "^20.1"}
redis = "*"
python-dateutil = "*"
pyyaml = "*"
aiohttp = "^3.8.4"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
