[tool.poetry]
name = "spanreed"
version = "0.1.0"
description = ""
authors = ["Amir Rachum <amir@rachum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
todoist-api-python = "*"
python-telegram-bot = {extras = ["job-queue", "callback-data"], version = "^20.1"}
redis = "*"
python-dateutil = "*"
pyyaml = "*"
aiohttp = "^3.8.4"
Jinja2 = "*"
quart = "*"
pigpio = "^1.78"

[tool.poetry.group.test.dependencies]
pytest = "*"
freezegun = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
types-PyYAML = "*"
types-redis = "*"
types-python-dateutil = "*"

[tool.poetry.group.rpi.dependencies]
smbus2 = "*"
gpiozero = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
